styles/globals.css
body {
    background-color: var(--background);
    color: var(--text);
}

@font-face {
    font-family: "Yantramanav";
    src: url("../app/fonts/Yantramanav/Yantramanav-Bold.ttf");
}

@font-face {
    font-family: "LeagueGothic";
    src: url("../app/fonts/League_Gothic/LeagueGothic-Regular-VariableFont_wdth.ttf");
}

@font-face {
    font-family: "Vazirmatn";
    src: url("../app/fonts/Vazirmatn/Vazirmatn-VariableFont_wght.ttf");
}

/* Navbar
______________________________*/
nav {
    height: 90px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

header {
    border-bottom: var(--primary) 2px solid;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

header ul {
    list-style: none;
    margin: 0;
}

header li {
    margin: 0;
}

.ham-menu {
    /* display: none; */
    background-color: var(--background-800);
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;

    transition: transform 0.3s ease-in-out;
    transform: translateY(-100%);

    &.active {
        transform: translateY(0);
    }
}

.ham {
    z-index: 100;
}

.mobile {
    padding: 0 20px
}

.nav-desktop {
    display: flex;
    align-items: center;
    gap: 20px;
}

.ham-menu ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    gap: 20px;
    margin-top: 6rem;
    margin-left: 20px;
}

.desktop {
    display: none;
}

.active {
    display: block;
}

@media (min-width: 650px) {
    .mobile {
        display: none;
    }

    .desktop {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
}


/* Hero Section
______________________________*/
.hero {
    padding-top: 92px;
    /* background-image: url("../images/Hero_BG.webp");
    background-size: cover;
    background-position: center; */
    height: calc(100vh - 92px);
    display: flex;
    align-items: center;
}

.hero .content {
    padding-top: 30px;
}

#hero-bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: -1;
}

.hero-img {
    display: none;
}

@media (min-width: 800px) {
    .hero-img {
        display: block;
        
    }
    
}


/*Text Styles
_________________________________ */
.menu-text {
    font-family: "Yantramanav";
    font-size: 24px;
    font-weight: 700;
    color: var(--text);
    text-decoration: none;
}

h2.subtitle {
    font-size: 50px;
}

.price {
    font-family: "LeagueGothic";
    font-size: 60px;
    color: var(--text);
}

.card-heading {
    font-family: "Vazirmatn";
    font-size: 4.5vw;
    font-weight: 600;
    margin-bottom: 5px;
}

.card-text {
    font-family: "Vazirmatn";
    font-size: 3vw;
    margin-bottom: 0;
}

@media (min-width: 800px) {
    h2.subtitle {
        font-size: 65px;
    }

    .card-heading {
        font-size: 2vw;
    }

    .card-text {
        font-size: 1.2vw;
    }
}

@media (min-width: 1200px) {
    h2.subtitle {
        font-size: 70px;
    }

    .card-heading {
        font-size: 1.2vw;
    }

    .card-text {
        font-size: .8vw;
        line-height: normal;
    }
}

@media (min-width: 1520px) {
    .card-heading {
        font-size: 20px;
    }

    .card-text {
        font-size: 14px;
    }
}


/*Banner
_________________________________ */
.banner {
    border-top: var(--primary) 2px solid;
    border-bottom: var(--primary) 2px solid;
    margin-top: 20px;
    padding: 20px 0;
}

.banner h2 {
    margin: 0 10px;
}

.banner.r {
    background-image: linear-gradient(to left, var(--background), rgba(0, 0, 0, 0.5)), url("../images/banner-bg.webp");
    background-size: cover;
    background-position: center;
    background-size: cover;
    background-position: center;
}

.banner.l {
    background-image: linear-gradient(to right, var(--background), rgba(0, 0, 0, 0.5)), url("../images/banner-bg.webp");
    background-size: cover;
    background-position: center;
    background-size: cover;
    background-position: center;
}


/*Offer / Recommendation
_________________________________ */
.offer {
    margin-top: 40px;
}

.img-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.front {
    transition: all 0.3s ease-in-out;
}

.front:hover, .front.active {
    transform: scale(1.1) rotate(2deg);
}
.dark {
    filter: brightness(0.5);
    transition: all 0.3s ease-in-out;
}

.dark:hover, .dark.active {
    filter: brightness(1);
    transform: scale(1.1) rotate(-2deg);
    z-index: 100;
}

.indicator-container {
    display: flex;
    justify-content: center;
    padding: 30px 0;
    gap: 10px;
}

.indicator {
    width: 14px;
    height: 14px;
    border-radius: 20px;
    background-color: var(--text);
    margin: 0;
    padding: 0;
    border: none;
}

.indicator:hover {
    background-color: var(--primary-200);
}

.indicator.active {
    background-color: var(--primary);
}

.tags-container {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    gap: 10px;
    margin-bottom: 20px;
}

.tag {
    padding: 6px 30px;
    border-radius: 50px;
}

.details-container {
    background-color: var(--background-800);
    padding: 10px 20px;
    border-radius: 20px;
    margin-top: 20px;
    display: flex;
    flex-wrap: wrap;
    font-size: 12px;
    margin-bottom: 20px;
}

.details-container div {
    margin-right: 20px;
}


/*Creators Corner
_________________________________ */
.creators-corner-container {
    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, .9)), url("../images/creators-corner-source.webp");
    background-size: cover;
    background-position: center;
    margin-top: 40px;
}

.creators-corner {
    padding-top: 20px;
    padding-bottom: 20px;
}

.card {
    background-color: var(--background-800);
    margin-top: 20px;
    position: relative;
    text-decoration: none;
    line-height: normal;
}

.card:hover::after {
    content: "Read More";
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--text);
    background-color: rgba(0, 0, 0, 0.7);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: inherit;
    font-size: 30px;
    font-weight: 700;
}

.cc-tag {
    font-size: 15px;
}


@media (min-width: 800px) {
    .creators-corner {
        padding-top: 60px;
        padding-bottom: 60px;
    }

    .card {
        margin-top: 0;
    }

    .cc-r {
        margin-top: 20px;
    }
}

/*Footer
_________________________________ */
.footer-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 40px;
}

.footer-list {
    list-style: none;
}

.footer-list a {
    text-decoration: none;
}

.footer-heading {
    border-bottom: var(--primary) 2px solid;
}

@media (min-width: 800px) {
    .footer-container {
        flex-direction: row;
        justify-content: space-between;
    }

    .footer-container h3 {
        font-size: 30px;
    }
}

@media (min-width: 1000px) {
    .footer-container h3 {
        font-size: 40px;
    }
}

@media (min-width: 1200px) {
    .footer-container h3 {
        font-size: 60px;
    }
}

